[package]
name = "rustbasic-core"
version = "0.0.1"
edition = "2024"
description = "Core framework logic for RustBasic"
license = "MIT OR Apache-2.0"

[dependencies]
# Web & Server
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header", "set-status"] }
tower = { version = "0.5.2", features = ["full"] }

# Template
minijinja = { version = "2.19.0", features = ["loader"] }
rust-embed = "8.11.0"

# Data & Utils
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
chrono-humanize = "0.2.3"
dotenvy = "0.15.7"
colored = "3.0"
regex = "1.10"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
async-trait = "0.1.86"
bcrypt = "0.19.1"
validator = { version = "0.20.0", features = ["derive"] }
sha2 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.1"

# Database
sea-orm = { version = "1.1.4", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "macros", "with-chrono"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "mysql", "any"] }
sea-orm-migration = { version = "1.1.4", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql"] }

# Security & Sessions
axum_session = { version = "0.20.0", features = ["key-store"] }
dashmap = "6.1.0"
once_cell = "1.19.0"
tower_governor = "0.8.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Mail
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Dev
tower-livereload = "0.10.3"
